[project]
name = "llm-tool-calling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.2",
    "langchain-aws>=0.2.27",
]

[project.scripts]
llm-tool-calling = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/main/python"]

[tool.hatch.build.targets.wheel.sources]
"src/main/python" = ""

[tool.pytest.ini_options]
testpaths = ["src/test/python"]
pythonpath = ["src/main/python"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
